# haskellvic3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  game_dir  hie.yaml  ideas_test  movefile.py  res  vic3-mod.cabal
URG/: URGCongress.hs  URGMain.hs  Utilities.hs
app/: BaseParser.hs  BasePrinter.hs  BoolExpParser.hs  BoolParser.hs  Main.hs  ParadoxGeneratorEnv.hs  Parser.hs  PrinterMain.hs  Template.hs  TemplateExp.hs  TestParse.hs  TypedNumExpParser.hs  UnTypedNumExpParser.hs
test/: MainTest.hs
test/testfile/: 00_goods copy.txt
test/testfile/buildings/: 08_monuments.txt
