cabal-version:      2.4
name:               vic3-mod
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: 
    MIT

license-file:       
    LICENSE
-- The package author(s).
author:
    YHTQ
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:
    1414672068@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

data-files:
    test/testfile/*.txt


common profiling
    ghc-options: 
        -O2 
        -fprof-auto
        "-with-rtsopts= -p -s -hT" 

common debug
    ghc-options: 
        -O0
        -Wall
common base_depends
    build-depends:    
        base,
        megaparsec,
        transformers,
        text,
        containers,
        mtl,
        template-haskell,
        prettyprinter,
        unicode-show,
        unordered-containers,
        parser-combinators
    other-modules:
        Paths_vic3_mod
    autogen-modules:
        Paths_vic3_mod
    default-extensions:
        FunctionalDependencies,
        LambdaCase,
        AllowAmbiguousTypes,
        TypeApplications,
        OverloadedStrings
common test_depends
    build-depends:
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        -- falsify,
common other_modules
    other-modules:
        TemplateExp,
        BaseParser,
        TypedNumExpParser,
        UnTypedNumExpParser,
        BoolParser,
        Parser,
        ParadoxGeneratorEnv,
        BasePrinter

test-suite test
    import: debug
    import: base_depends
    import: other_modules
    import: test_depends
    type:   exitcode-stdio-1.0
    main-is:         MainTest.hs
    default-language: GHC2021
    hs-source-dirs:   
        app
        test
executable profile
    import: profiling
    import: base_depends
    import: other_modules
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    
    hs-source-dirs:   app
    default-language: GHC2021

executable debug
    import: debug
    import: base_depends
    import: other_modules
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    --other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    
    build-depends:    base 
    hs-source-dirs:   app
    default-language: GHC2021 

executable print
    import: base_depends
    import: other_modules
    other-modules:
        BasePrinter,
        ParadoxGeneratorEnv
    main-is: PrinterMain.hs
    hs-source-dirs:   app
    default-language: GHC2021


